--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><body>
+<html><head><link rel="stylesheet" href = "styles.css"></head><body>
      <audio id="intro" loop src ="https://raw.githubusercontent.com/steverhee3/stepfunctionality/main/songs/Elevator%20Music%20-%20Gaming%20Background%20Music%20(HD).mp3"></audio>
     <script>
         
@@ -9,5 +9,5 @@ function startSong() {
   document.getElementById('intro').play();
 }
     
-       </script></body>
+       </script><script src="script.js"></script></body>
 </html>
