--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html><head><link rel="stylesheet" href = "styles.css"></head><body>
      <audio id="intro" loop src ="https://raw.githubusercontent.com/steverhee3/UNJEARHEE/main/Gb5HdJjwoXM-00_00_10.00-00_01_02.00.mp3"></audio>
+     <script src="script.js"></script>
     <script>
         
     setTimeout(startSong(), 10);
@@ -9,5 +10,5 @@ function startSong() {
   document.getElementById('intro').play();
 }
     
-       </script><script src="script.js"></script></body>
+       </script></body>
 </html>
