--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html><head><link rel="stylesheet" href = "styles.css"></head><body>
+<html><head><link rel="stylesheet" href = "https://steverhee3.github.io/UNJEARHEE/styles.css"></head><body>
      <audio id="intro" loop src ="https://raw.githubusercontent.com/steverhee3/UNJEARHEE/main/Gb5HdJjwoXM-00_00_10.00-00_01_02.00.mp3"></audio>
-     <script src="script.js"></script>
+     <script src="https://steverhee3.github.io/UNJEARHEE/script.js"></script>
     <script>
         
     setTimeout(startSong(), 10);
