--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-<html><head><link rel="stylesheet" href = "https://steverhee3.github.io/UNJEARHEE/styles.css"></head><body>
+<html><head><link rel="stylesheet" href = "https://steverhee3.github.io/UNJEARHEE/styles.css"></head><body class="ego">
      <audio id="intro" loop src ="https://raw.githubusercontent.com/steverhee3/UNJEARHEE/main/Gb5HdJjwoXM-00_00_10.00-00_01_02.00.mp3"></audio>
      <script src="https://steverhee3.github.io/UNJEARHEE/script.js" type="module"></script>
     <script>
+         
+         ego.addEventListener('click', () => {
+  
+  document.getElementById('intro').play();
+})
         
     setTimeout(startSong(), 10);
 setInterval(startSong(), 53);
