--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      <script src="https://steverhee3.github.io/UNJEARHEE/script.js" type="module"></script>
     <script>
          
-         document.addEventListener('focus', () => {
+         document.addEventListener('touchstart', () => {
  
   document.getElementById('intro').play();
 });
